fixed spacing between nav

--- a/css/screen.css
+++ b/css/screen.css
@@ -855,7 +855,7 @@ h1, h2, h3 {
         width: 32rem;
     }
     #header section nav ul li {
-        margin-right: 2.55rem;
+        margin-right: 2.475rem;
     }
     
     /* Section: Home */
